# r6

./: github.bat
Solara/: .gitignore  COMPILATION_STATUS.md  README.md  REMEDIATION_PLAN.md
Solara/bootloader/: Cargo.toml
Solara/bootloader/src/: advanced_obfuscation.rs  bootloader.rs  bypass.rs  exploit.rs  inject.rs  load.rs  main.rs  obfuscation.rs
Solara/docs/research/: signed_driver_research.md
Solara/hypervisor/: Cargo.toml
Solara/hypervisor/src/: advanced_obfuscation.rs  anti_forensics.rs  anti_hooking.rs  comm.rs  evasion.rs  hardware_evasion.rs  kernel_stealth.rs  main.rs  memory.rs  memory_protection.rs  ml_evasion.rs  network_obfuscation.rs  obfuscation.rs  payload.rs  persistence.rs  spoofing.rs  stealth.rs  vmx.rs
Solara/legacy/: Cargo.toml  Package.appxmanifest  build.rs
Solara/legacy/kernel_driver/: Cargo.toml  build.rs
Solara/legacy/kernel_driver/src/: anti_analysis.rs  communication.rs  driver.rs  lib.rs  memory.rs  offsets.rs  simple_driver.rs  stealth.rs
Solara/legacy/src/: esp_data.rs  ipc_client.rs  main.rs  overlay_ui.rs  renderer.rs  shader.wgsl  stealth.rs
Solara/legacy/user_helper/: Cargo.toml  build.rs
Solara/legacy/user_helper/.cargo/: config.toml
Solara/legacy/user_helper/src/: anti_analysis.rs  cleanup.rs  config_manager.rs  driver_interface.rs  enhanced_security.rs  game.rs  main.rs  memory_pool.rs  offset_updater.rs  overlay_ipc.rs  r6s_offsets.rs  security.rs  spectator_detection.rs  stealth.rs  telemetry.rs  test_mode.rs  web_api.rs  web_bridge.rs
SolaraWeb/: README.md  index.html
SolaraWeb/Main Page/: index.html
SolaraWeb/Main Page/_app/immutable/assets/: 2.D8V3eyTD.css  progress.C6u19ZhB.css
SolaraWeb/Menu/: index.html
SolaraWeb/Menu/_app/immutable/assets/: sonner.D-t0946E.css
SolaraWeb/Menu/menu/: index.html
