[package]
name = "solara-bootloader"
version = "0.1.0"
edition = "2021"
authors = ["Solara Team"]
description = "Secure Boot bypass and hypervisor loading system"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
obfstr = "0.4"
litcrypt = "0.4"
fastrand = "2.0"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Services"
]}
winapi = { version = "0.3", features = [
    "winnt",
    "winerror",
    "handleapi",
    "fileapi",
    "ioapiset",
    "winioctl",
    "memoryapi",
    "processthreadsapi",
    "securitybaseapi"
]}

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

[profile.release.package."*"]
opt-level = "z"
debug = false

[profile.dev]
panic = "abort"
