[package]
name = "solara-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winit = "0.28"
wgpu = "0.17"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi"
]}
winapi = { version = "0.3", features = [
    "winuser",
    "wingdi", 
    "d3d11",
    "dxgi1_2",
    "dxgitype",
    "dxgiformat"
]}

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
strip = true
debug = false
debug-assertions = false

[profile.dev]
panic = "abort"

[build-dependencies]
winres = "0.1"
