[package]
name = "solara-driver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3", features = [
    "basetsd",
    "minwindef",
    "ntdef",
    "ntstatus"
]}
wdk = "0.2"
wdk-sys = "0.2"
spin = "0.9"
heapless = "0.8"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
strip = true
overflow-checks = false
debug = false
debug-assertions = false

[profile.dev]
panic = "abort"
overflow-checks = false

[build-dependencies]
cc = "1.0"
