[package]
name = "solara-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solara-helper"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "consoleapi",
  "processenv",
  "wincon",
  "tlhelp32",
  "wow64apiset",
  "processthreadsapi",
  "handleapi",
  "minwindef",
  "winnt",
]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
tokio-tungstenite = "0.20"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.21"
winapi = { version = "0.3", features = [
    "winuser",
    "winbase", 
    "processthreadsapi",
    "handleapi",
    "synchapi",
    "memoryapi",
    "fileapi",
    "ioapiset",
    "winerror",
    "ntdef",
    "minwindef",
    "psapi",
    "sysinfoapi",
    "debugapi"
]}
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_Security"
]}
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
strip = true
debug = false
debug-assertions = false

[profile.dev]
panic = "abort"

[build-dependencies]
winres = "0.1"
